--- a/fase3/css/estilos.css
+++ b/fase3/css/estilos.css
@@ -1,39 +1,19 @@
+
 * {
     margin: 0;
-    /*padding: 0;*/
     box-sizing: border-box;
 }
+
+.seccion-redes{
+    overflow: hidden;
+}
+
 nav{
     background-color:#014f04;
     padding: 4px;
     
 }
-footer{
-    background-color: black;
-    color: blanchedalmond;
-    padding: 20px;
-    text-align: center;
-}
-pre {
-    background-color: #e2e2e2;
-    font-size: 1.1em;
-    line-height: 1.44rem;
-    padding: 0.72rem;
-    margin: 1.2rem 0;
-    border-radius: 3px;
-    color: black;
-}
-pre {
-    font-family: monospace;
-    font-size: 1em;
-    white-space: pre-wrap;
-}
-footer{
-    background-color: #014f04;
-    color: blanchedalmond;
-    padding: 20px;
-    text-align: center;
-}
+
 header{
     background-color:white;
        /* Enable flex mode. */
@@ -44,16 +24,8 @@ header{
        align-items: center;
 }
 
-div{
-    /*display: grid;
-    grid-template-columns: 40% 30% 30%;*/
-}
 section{
-    /*grid-column: 1/3;
-    background-color: dimgrey;
-    color: indigo;
-    */
-    padding: 5px;
+    padding: 0px 5px 5px 5px;
 }
 
 .color-div2{
@@ -64,14 +36,6 @@ section{
     background: #aec56c;
     color: #2e3e03;
 }
-
-/*aside{
-    grid-column: 3/4;
-    background-color: lightcoral;
-    padding: 20px;
-}*/
-
-/* MENU */
 
 .menu-area a {
     display: flex;
@@ -136,6 +100,42 @@ h3{
     margin: 10px auto 10px auto;
 }
 
+footer{
+    background-color: black;
+    color: blanchedalmond;
+    padding: 20px;
+    text-align: center;
+}
+
+footer{
+    background-color: #014f04;
+    color: blanchedalmond;
+    padding: 20px;
+    text-align: center;
+}
+
 .seccion-footer{
+    width: 100%;
     margin-top:30px;
+}
+
+pre {
+    background-color: #a2a2ff9c;
+    color: black;
+    font-size: 1.1em;
+    line-height: 1.44rem;
+    padding: 0.72rem;
+    margin: 1.2rem 0;
+    border-radius: 3px;
+}
+pre {
+    font-family: monospace;
+    font-size: 1em;
+    white-space: pre-wrap;
+}
+
+.titulo-principal{
+    text-align: center;
+    color: #014f04;
+    font-size: 35px;
 }
